# pyloops

./: CMakeLists.txt  bresenham.py  common.cpp  common.hpp  func.cpp  func.hpp  ireg.cpp  ireg.hpp  make_conditionpainter.py  minmaxloc.py  nonnegative_odd.py  pyloops.c  pyloops.cpp  pythonexample.py  pythonexample2.py
